Calc: fix formulabar expander being cropped on mobile
- Make sure all elements within formulabar toolbox fit even
on smaller devices
    - Do not user margins to position, use instead grid
- Remove Equal sign (startformula). Before this commit the
startformula icon was visible and then invisible once the user
enter the cell to type -> it seems this was initially intended to save
space but the truth of the matter is that it causes a flicker and
where the position of the elements shift making even harder to write
on mobile.
    - Solution: do not create that element in the first place on
mobile. Plus when the user enter the cell can always press the "="
right via the native keyboard anyhow.

note: avoid multiple instances of the same condition in FormulaBarJSDialog

--- a/browser/css/device-mobile.css
+++ b/browser/css/device-mobile.css
@@ -425,6 +425,20 @@ button.button-secondary.vex-dialog-button.vex-last {
 nav:not(.spreadsheet-color-indicator) ~ #toolbar-wrapper #toolbar-up.w2ui-toolbar {
 	border-color: transparent;
 }
+.formulabar.unotoolbutton {
+	margin: 0 !important;
+}
+#expand.formulabar {
+	margin-inline-start: -8px !important
+}
+.formulabar.toolbox {
+	grid-column-gap: 8px;
+	/* fx = inputfield expander */
+	grid-template-columns: 24px auto 16px 0;
+	display: grid;
+	grid-auto-flow: column;
+	align-items: center;
+}
 #formulabar {
 	padding: 0px !important;
 	border-top: 1px solid #bbbbbb !important;
